# pmpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg.json
src/: main.cpp  main.cu
src/chapter_02/: CMakeLists.txt  chapter_02.h
src/chapter_02/exercise/: exercise.cpp  exercises.cpp  exercises.h
src/chapter_02/sample/: vec_add_kernel.cu  vec_add_kernel.h
src/chapter_03/: CMakeLists.txt  chapter_03.h
src/chapter_03/exercise/: exercise.cpp  exercise.h  mm.cpp  mm.h  mm_kernel.cu  mm_kernel.h
src/chapter_03/sample/: blur_kernel.cu  blur_kernel.h  color_to_grayscale.cu  color_to_grayscale.h  multi_dim.cu
src/chapter_04/: chapter_04.h
src/chapter_04/exercise/: exercise.cpp  exercise.h
src/chapter_04/sample/: cuda_device_props.cu  cuda_device_props.h
src/shared/: CMakeLists.txt  shared.cpp  shared.h
